added payment-service and stripe integration
